--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,9 +16,9 @@ build:
 
 requirements:
   host:
-    - python >=3.12,<4.0
-    - poetry-core
+    - hatchling
     - pip
+    - python >=3.12,<4.0
   run:
     - python >=3.12.0,<4.0.0
     - pymoo >=0.6.1,<0.7.0
