--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,12 +21,12 @@ requirements:
     - pip
     - python {{ python_min }}
   run:
-    - python >={{ python_min }},<4.0.0
+    - python >={{ python_min }}
     - pymoo >=0.6.1,<0.7.0
     - eppy-core >=0.5.63,<0.6.0
-    - numpy >=2.0.0,<3.0.0
-    - scipy >=1.13.0,<2.0.0
-    - psutil >=6.0.0,<7.0.0
+    - numpy ==2.*
+    - scipy >=1.13,<2.0
+    - psutil ==6.*
 
 test:
   requires:
